// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Corporis quasi qui voluptatem nihil sit nisi fugit. Et omnis ea eos voluptatem sint. Nostrum asperiores numquam fugiat a cumque repellat. Unde eaque placeat quasi id voluptatum ullam ut vero itaque. Corrupti autem ut voluptatum saepe. Ducimus explicabo debitis odit aliquam.
 
Qui voluptas quod unde voluptatem. Dolores tempore vero qui. Explicabo quae accusamus aspernatur ut tempora iure ea sunt qui. Repellendus architecto quis officiis veritatis hic est.
 
Veniam corrupti non impedit laboriosam. Iste magnam aut facere enim molestiae libero. Voluptas delectus est aperiam voluptas deleniti necessitatibus vitae facere nihil. Voluptatem totam iste non nam ipsa hic quia suscipit. Molestias eligendi officiis. Magnam et est assumenda dolorem sed aliquid eaque.
 
Ipsa adipisci harum suscipit. Illo illum id qui excepturi quo et neque et. Pariatur accusamus blanditiis aut perferendis molestiae officiis. Expedita pariatur qui magnam hic. Ab dignissimos ut. Veritatis et quam blanditiis et nostrum vitae.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Voluptate consequuntur delectus est non voluptas. Ipsa consequatur corrupti ex. Ea tenetur a rerum. Laborum earum aut nihil nisi doloremque eveniet voluptate iusto non. Dolorem earum distinctio nobis.
 
Quas accusamus cum. Est id dolores minus perferendis aliquam rem animi. Vel eligendi illo perspiciatis magni. Voluptas in et cumque provident quo dolore non exercitationem.
 
Enim quam placeat et occaecati eveniet beatae sed ullam. Fuga aut est corrupti quasi animi qui non inventore. Excepturi at sit veniam maxime rerum esse. Ipsam fugit facilis tempora est mollitia est. Saepe magni vel neque. Nulla nulla animi et sapiente eius.
 
Mollitia velit animi deserunt et unde inventore ullam. Autem hic sint sed voluptatem consectetur facilis facere distinctio. Iusto voluptas iusto. Dolor officia est at repudiandae id ab qui minus debitis.
    </p>
  </div>
</div>
`;
